fix books filters on mobile

--- a/styles/Books.module.css
+++ b/styles/Books.module.css
@@ -353,32 +353,31 @@ main[data-theme="dark"] .button:focus-visible {
   }
 
   .filters {
-    grid-template-columns: 1fr;
+    display: grid;
+    grid-template-columns: 1fr auto;
     padding-inline: 1rem;
     gap: 0.75rem;
   }
 
-  .filterGroup {
-    width: 100%;
+  .filterGroup:first-of-type {
+    grid-area: 1 / 1 / 2 / 3;
+  }
+
+  .filterGroup:nth-of-type(2) {
+    grid-area: 2 / 1 / 3 / 3;
+  }
+
+  .filtersMeta {
+    grid-area: 1 / 2 / 2 / 3;
   }
 
   .chipGroup {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(6.5rem, 1fr));
+    display: flex;
     gap: 0.5rem;
-  }
-
-  .chipLang {
-    width: 100%;
   }
 
   .chip {
     padding: 0.45rem 0.7rem;
-  }
-
-  .filtersMeta {
-    width: 100%;
-    justify-content: space-between;
   }
 
   .booksContainer > figure:hover,
@@ -399,5 +398,12 @@ main[data-theme="dark"] .button:focus-visible {
 @media (width <=600px) {
   .mainContainer > div {
     padding: 2rem 0.25rem;
+  }
+}
+
+@media (width <=450px) {
+  .filters > div {
+    grid-area: unset;
+    justify-content: unset;
   }
 }
